unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/ia_crm__Intacct_Configuration__c.object-meta.xml
<CustomObject>
    <description>Contains application settings fields.</description>
    <label>Intacct Configuration</label>
    <nameField>
        <label>Intacct Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Intacct Configuration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>