unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/fields/ia_crm__Add_Line_Contract_Exclude_Default_Fields__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Add_Line_Contract_Exclude_Default_Fields__c</fullName>
    <label>Add Line Contract Exclude Default Fields</label>
    <length>700</length>
    <type>LongTextArea</type>
</CustomField>