unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/fields/ia_crm__Add_on_Opportunity_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Add_on_Opportunity_Record_Type__c</fullName>
    <label>Add-on Opportunity Record Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>