unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/fields/ia_crm__Automatically_Create_Renewal_Opps__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Automatically_Create_Renewal_Opps__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Automatically Create Renewal Opportunities, Opportunity Products and Contracts.</description>
    <label>Automatically Create Renewal Opps</label>
    <type>Checkbox</type>
</CustomField>