unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/fields/ia_crm__Bill_To_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Bill_To_Account_Type__c</fullName>
    <label>Bill To Account Type</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>