unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/fields/ia_crm__Company_Name__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Company_Name__c</fullName>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>