unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/fields/ia_crm__Company_Type__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Company_Type__c</fullName>
    <label>Company Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Shared</fullName>
            </value>
            <value>
                <fullName>Distributed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>