unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/fields/ia_crm__Contract_PB_Intacct_to_SFDC__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Contract_PB_Intacct_to_SFDC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract PB Intacct to SFDC</label>
    <type>Checkbox</type>
</CustomField>