unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/fields/ia_crm__Contract_Record_Types_2__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Contract_Record_Types_2__c</fullName>
    <label>Contract Record Types</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>