unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/fields/ia_crm__Contract_Record_Types__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Contract_Record_Types__c</fullName>
    <defaultValue>&quot;Contract&quot;</defaultValue>
    <description>Record types used for the contract flows.</description>
    <label>(Depricated) Contract Record Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>