unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/fields/ia_crm__Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Contract_Status__c</fullName>
    <defaultValue>&quot;Activated&quot;</defaultValue>
    <description>Contract status to be taked into consideration when synching with Intacct.</description>
    <label>Contract Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>