unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/fields/ia_crm__Contracts_enable_sync__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Contracts_enable_sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contracts enable sync</label>
    <type>Checkbox</type>
</CustomField>