unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/fields/ia_crm__Create_contract_at_top_level__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Create_contract_at_top_level__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create contract at top level</label>
    <type>Checkbox</type>
</CustomField>