unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/fields/ia_crm__Custom_validations__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Custom_validations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom validations</label>
    <type>Checkbox</type>
</CustomField>