unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/fields/ia_crm__DBB_enabled__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__DBB_enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DBB enabled</label>
    <type>Checkbox</type>
</CustomField>