unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/fields/ia_crm__Default_Add_On_Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Default_Add_On_Opportunity_Stage__c</fullName>
    <label>Default Add-On Opportunity Stage</label>
    <length>200</length>
    <type>Text</type>
</CustomField>