unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/fields/ia_crm__Default_Renewal_Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Default_Renewal_Opportunity_Stage__c</fullName>
    <defaultValue>&quot;Prospecting&quot;</defaultValue>
    <label>Default Renewal Opportunity Stage</label>
    <length>200</length>
    <type>Text</type>
</CustomField>