unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/fields/ia_crm__Delete_Error_logs_After__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Delete_Error_logs_After__c</fullName>
    <description>Contains the number of days before the error logs are deleted.</description>
    <label>Delete Error logs After</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>