unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/fields/ia_crm__Department__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department</label>
    <referenceTo>ia_crm__Department__c</referenceTo>
    <relationshipLabel>Intacct_Configuration</relationshipLabel>
    <relationshipName>Intacct_Configuration</relationshipName>
    <type>Lookup</type>
</CustomField>