unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/fields/ia_crm__Dimension_Default_Group__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Dimension_Default_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dimension Default Group</label>
    <referenceTo>ia_crm__Dimension_Default_Group__c</referenceTo>
    <relationshipLabel>Intacct Configuration</relationshipLabel>
    <relationshipName>Intacct_Configuration</relationshipName>
    <type>Lookup</type>
</CustomField>