unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/fields/ia_crm__Disable_Add_on_Opportunity_Clone__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Disable_Add_on_Opportunity_Clone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Add-on Opportunity Clone</label>
    <type>Checkbox</type>
</CustomField>