unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/fields/ia_crm__Disable_Hidden_Dimensions_Validation__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Disable_Hidden_Dimensions_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Hidden Dimensions Validation</label>
    <type>Checkbox</type>
</CustomField>