unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/fields/ia_crm__Disable_Status_Validations__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Disable_Status_Validations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Status Validations</label>
    <type>Checkbox</type>
</CustomField>