unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/fields/ia_crm__Enable_DBB_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Enable_DBB_Line_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable DBB Line Number</label>
    <type>Checkbox</type>
</CustomField>