unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/fields/ia_crm__Enable_Intacct_Salesforce_sync__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Enable_Intacct_Salesforce_sync__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field is managed by Intacct.</inlineHelpText>
    <label>Enable Intacct Salesforce sync</label>
    <type>Checkbox</type>
</CustomField>