unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/fields/ia_crm__Enforce_One_To_One_OE_Transaction__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Enforce_One_To_One_OE_Transaction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enforce One To One OE Transaction</label>
    <type>Checkbox</type>
</CustomField>