unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/fields/ia_crm__Intacct_Journal_Entry__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Intacct_Journal_Entry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intacct Journal Entry</label>
    <type>Checkbox</type>
</CustomField>