unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/fields/ia_crm__Journal_Entry_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Journal_Entry_Batch_Size__c</fullName>
    <label>Journal Entry Batch Size</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>