unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/fields/ia_crm__Journal_Entry_Line_Duplicate_Prevention__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Journal_Entry_Line_Duplicate_Prevention__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Journal Entry Line Duplicate Prevention</label>
    <type>Checkbox</type>
</CustomField>