unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/fields/ia_crm__OE_Price_books_sync__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__OE_Price_books_sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OE Price books sync</label>
    <type>Checkbox</type>
</CustomField>