unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/fields/ia_crm__OE_Price_Source__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__OE_Price_Source__c</fullName>
    <label>OE Price Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intacct</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>