unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/fields/ia_crm__Opportunity_Products_Defaults_Update__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Opportunity_Products_Defaults_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opportunity Products Defaults Update</label>
    <type>Checkbox</type>
</CustomField>