unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/fields/ia_crm__Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Opportunity_Stage__c</fullName>
    <defaultValue>&quot;Closed Won&quot;</defaultValue>
    <label>Opportunity Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>