unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/fields/ia_crm__Order_Entry_Flow__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Order_Entry_Flow__c</fullName>
    <label>Order Entry Flow</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Old</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>