unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/fields/ia_crm__Order_Entry_Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Order_Entry_Opportunity_Stage__c</fullName>
    <label>Order Entry Opportunity Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>