unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/fields/ia_crm__Order_Entry_Record_Types__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Order_Entry_Record_Types__c</fullName>
    <label>Order Entry Record Types</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>