unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/fields/ia_crm__Organization_Type__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Organization_Type__c</fullName>
    <description>Store the value of the organization type.</description>
    <label>Organization Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single-entity</fullName>
            </value>
            <value>
                <fullName>Single-entity, multi-currency</fullName>
            </value>
            <value>
                <fullName>Multi-entity shared</fullName>
            </value>
            <value>
                <fullName>Multi-entity shared, multi-currency</fullName>
            </value>
            <value>
                <fullName>M-Console</fullName>
            </value>
            <value>
                <fullName>M-Console, multi-currency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>