unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/fields/ia_crm__Package_Type__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Package_Type__c</fullName>
    <label>Package Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Opportunity &amp; Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>