unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/fields/ia_crm__Product_SFDC_to_Intacct__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Product_SFDC_to_Intacct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product SFDC to Intacct</label>
    <type>Checkbox</type>
</CustomField>