unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/fields/ia_crm__Project_direct_method__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Project_direct_method__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Project direct method</label>
    <type>Checkbox</type>
</CustomField>