unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/fields/ia_crm__Project_Updates__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Project_Updates__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Project Updates</label>
    <type>Checkbox</type>
</CustomField>