unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/fields/ia_crm__Projects__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Projects__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Projects</label>
    <type>Checkbox</type>
</CustomField>