unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/fields/ia_crm__Renewal_Email__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Renewal_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renewal email alert</label>
    <type>Checkbox</type>
</CustomField>