unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/fields/ia_crm__Renewal_Opportunity_Grouping__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Renewal_Opportunity_Grouping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renewal Opportunity Grouping</label>
    <type>Checkbox</type>
</CustomField>