unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/fields/ia_crm__Renewal_Opportunity_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Renewal_Opportunity_Record_Type__c</fullName>
    <defaultValue>&quot;Contract&quot;</defaultValue>
    <description>The record type that will be used when creating the Renewal Opportunities.</description>
    <label>Renewal Opportunity Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>