unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/fields/ia_crm__Renewal_schedule_name__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Renewal_schedule_name__c</fullName>
    <label>Renewal schedule name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>