unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/fields/ia_crm__Renewal_schedule_time__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Renewal_schedule_time__c</fullName>
    <label>Renewal schedule time</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>