unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/fields/ia_crm__Require_Bill_to_and_Ship_to_contracts__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Require_Bill_to_and_Ship_to_contracts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require Bill to and Ship to contacts</label>
    <type>Checkbox</type>
</CustomField>