unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/fields/ia_crm__Run_Scheduled_Jobs_With__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Run_Scheduled_Jobs_With__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Run Scheduled Jobs With</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Intacct_Configuration</relationshipName>
    <type>Lookup</type>
</CustomField>