unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/fields/ia_crm__Sync_Accounts_First__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Sync_Accounts_First__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync Accounts First</label>
    <type>Checkbox</type>
</CustomField>