unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/fields/ia_crm__Sync_only_once__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Sync_only_once__c</fullName>
    <label>Sync only once</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>