unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/fields/ia_crm__Sync_Recods_For_Unmapped_Users__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Sync_Recods_For_Unmapped_Users__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync Recods For Unmapped Users</label>
    <type>Checkbox</type>
</CustomField>