unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/fields/ia_crm__Term_Type__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Term_Type__c</fullName>
    <label>Term Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Termed</fullName>
                <default>true</default>
                <label>Termed</label>
            </value>
            <value>
                <fullName>Evergreen</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>