unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/fields/ia_crm__Transaction_definition_record_type__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Transaction_definition_record_type__c</fullName>
    <defaultValue>&quot;OrderEntry&quot;</defaultValue>
    <description>Store the values of the saved recordtypes.</description>
    <label>(Depricated) Transaction definition RT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>