unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/fields/ia_crm__Validate_closed_opportunities__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Validate_closed_opportunities__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validate closed opportunities</label>
    <type>Checkbox</type>
</CustomField>