unpackaged/main/default/objects/ia_crm__Intacct_Configuration__c/listViews/ia_crm__All_Records.listView-meta.xml
<ListView>
    <fullName>ia_crm__All_Records</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>